[package]
name = "slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
actix-web = "4"
eyre = "0.6.11"